fixed overflow

--- a/css/eventbox.css
+++ b/css/eventbox.css
@@ -5,7 +5,7 @@
     /*width: 100%;*/
 	position:relative;
     /*top: 0px;*/
-    /*overflow: hidden;*/
+    overflow: hidden;
     font-family: sans-serif;
 	text-align:left;
 
@@ -51,7 +51,8 @@
   white-space: nowrap;
   background-color:rgba(0, 0, 0, 0.7);
   float: left;
-padding: 5px;
+  padding: 2px;
+  margin: 2px;
 
 }
 
